@@ -31,7 +31,7 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
 
 #include "sqlite3.h"
 
-void kmlvalueheightcolor(sqlite3 *db, FILE *f, const char *name, const char *desc, const char *columnname, int height, const char *col, int numcols, int defaultvis, double start, double end) {
+void kmlvalueheightcolor(sqlite3 *db, FILE *f, const char *name, const char *desc, const char *columnname, int height, const char *col, int numcols, int defaultvis, double start, double end, int trip) {
 	int rc; // return from sqlite
 	sqlite3_stmt *stmt; // sqlite statement
 	const char *dbend; // ignored handle for sqlite
@@ -40,11 +40,11 @@ void kmlvalueheightcolor(sqlite3 *db, FILE *f, const char *name, const char *des
 
 	snprintf(select_sql,sizeof(select_sql),
 					"SELECT %i*%s/(SELECT MAX(%s) FROM obd "
-						"WHERE obd.time>%f AND obd.time<%f) "
+						"WHERE trip=%i) "
 					"AS height,gps.lat, gps.lon, %s "
 					"FROM obd INNER JOIN gps ON obd.time=gps.time "
-					"WHERE obd.time>%f AND obd.time<%f",
-					height, columnname, columnname, start, end, col, start, end);
+					"WHERE obd.trip=%i",
+					height, columnname, columnname, trip, col, trip);
 
 	rc = sqlite3_prepare_v2(db, select_sql, -1, &stmt, &dbend);
 
@@ -61,11 +61,11 @@ void kmlvalueheightcolor(sqlite3 *db, FILE *f, const char *name, const char *des
 			char percentile_sql[2048]; // the actual sql
 			snprintf(percentile_sql, sizeof(percentile_sql),
 				"SELECT %s AS ckobd FROM obd "
-				"WHERE vss>0 AND obd.time>%f AND obd.time<%f "
+				"WHERE vss>0 AND obd.trip=%i "
 				"ORDER BY ckobd "
 				"LIMIT 1 OFFSET (SELECT %i*COUNT(*)/100 FROM obd "
-					"WHERE vss>0 AND obd.time>%f AND obd.time<%f)",
-				col, start, end, i*100/numcols, start, end);
+					"WHERE vss>0 AND obd.trip=%i)",
+				col, trip, i*100/numcols, trip);
 
 			sqlite3_stmt *pstmt; // the percentile statement
 			rc = sqlite3_prepare_v2(db, percentile_sql, -1, &pstmt, &dbend);
