@@ -44,7 +44,7 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
  \param start the start time we want to pull data for
  \param end the end time we want to pull data for
  */
-void kmlvalueheightcolor(sqlite3 *db, FILE *f, const char *name, const char *desc, const char *columnname, int height, const char *col, int numcols, int defaultvis, double start, double end);
+void kmlvalueheightcolor(sqlite3 *db, FILE *f, const char *name, const char *desc, const char *columnname, int height, const char *col, int numcols, int defaultvis, double start, double end, int trip);
 
 
 #endif //__HEIGHTANDCOLOR_H
