@@ -42,7 +42,7 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
  \param start the start time we want to pull data for
  \param end the end time we want to pull data for
  */
-void kmlvalueheight(sqlite3 *db, FILE *f, const char *name, const char *desc, const char *columnname, int height, int defaultvis, double start, double end);
+void kmlvalueheight(sqlite3 *db, FILE *f, const char *name, const char *desc, const char *columnname, int height, int defaultvis, double start, double end, int trip);
 
 
 #endif //__SINGLEHEIGHT_H
